--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
-* {
-    box-sizing: border-box;
+*, *::before, *::after {
+    box-sizing:border-box;
 }
+
 
 @import url('https://fonts.googleapis.com/css2?family=Sono&display=swap');
 
@@ -18,7 +19,7 @@ body {
     -o-background-size: cover;
     background-size: cover;
     font-family:'Source Serif Pro', serif;
-    overflow: hidden;
+    
 	
     
     
@@ -72,8 +73,8 @@ img#location {
 }
 
 img#search {
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     
 }
 
@@ -123,8 +124,10 @@ p#medium {
 }
 .vid-log {
     margin-top: 50px;
+    width: 64px;
+    height: 64px;
 }
-img.img-play {
+#play.img-play {
     margin: 20px auto;
     padding: 30px;
     flex-basis: 100px;
@@ -133,5 +136,127 @@ img.img-play {
 
 
 
+/* ==============EXPLORE================== */
+.explore {
+    background: linear-gradient(rgba(0, 0, 0, 0.8),
+    rgba(0, 0, 0, 0.6),
+    rgba(0, 0, 0, 0.6),
+    rgba(0, 0, 0, 0.8)); 
+    background-color: black;
+    -webkit-background-size: cover;
+    height: 1024px;
+    background-position: center;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    font-family:'Source Serif Pro', serif;
+    padding: 0;
+    margin: 0;
+    
+}
+
+#main-con {
+    text-align: center;
+    max-width: 1200px;
+    margin: 0px auto;
+    padding: 0 1rem;
+}
+
+.title_w {
+    display: block;
+    color: white;
+    margin: 10px;
+    padding: 20px;
+}
+
+.title {
+    width: 100%;
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+    font-size: 50px;
+}
+
+.para {
+    width: 100%;
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+    font-size: 15px;
+}
+
+.three {
+    min-height: 60vh;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-content: center;
+    gap:2%;
+}
+
+figure.figure {
+    flex-basis: 32%;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    
+    
+    
+}
+.fig0,
+.fig00 {
+    float: left;
+}
+
+.fig000 {
+    float: right;
+}
+img {
+    width: 100%;
+}
+
+figcaption.caption1 {
+    position: absolute;
+    text-align: center;
+    height: auto;
+    font-weight: bolder;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    bottom: 0%;
+    width: 100%;
+    height: 1024px;
+    background: linear-gradient(rgba(0, 0, 0, 0.8),
+    rgba(0, 0, 0, 0.6),
+    rgba(0, 0, 0, 0.6),
+    rgba(0, 0, 0, 0.8));
+    opacity: 0.7;
+    padding: 10px;
+    
+}
+
+h2 {
+    font-family: 'Cormorant', serif;
+    color: #ffffff;
+    text-shadow: 5px 5px 15px #ffffff;
+    font-size: 30px;
+}
+
+figcaption > .p {
+    color: #ffffff;
+    font-size: 15px;
+    font-family: 'Nunito', sans-serif;
+    text-shadow: 5px 5px 15px #ffffff;
+}
+
+.see-more {
+    margin: 20px;
+    padding: 20px;
+    font-family: 'Sono', sans-serif;
+}
+
+p > a {
+    text-decoration: none;
+    text-shadow: 1px 1px 15px rgb(0, 76, 255);
+    font-size: 17px;
+    color: rgb(0, 106, 255);
+
+}
 
 
