--- a/project-3/css/style.css
+++ b/project-3/css/style.css
@@ -645,6 +645,11 @@ code, pre {
         padding: 10px;
         background-color: rgba(0,0,0,0.1);
     }
+    
+    .showcase-text, .showcase-form {
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
 
     
 }
